fixed style issue where page was always too tall

--- a/assets/css/less/base.less
+++ b/assets/css/less/base.less
@@ -17,7 +17,6 @@ body {
     width:100%;
     height: 100%;
     max-height:100%;
-    min-height: 800px;
 }
 
 .ZEEGA-content-wrapper{
