--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1465,7 +1465,6 @@ body {
   width: 100%;
   height: 100%;
   max-height: 100%;
-  min-height: 800px;
 }
 .ZEEGA-content-wrapper {
   width: 550px;
